--- a/index.html
+++ b/index.html
@@ -5,68 +5,62 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>СамСобіШеф | Робота Одеса</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Arial:wght@700&display=swap');
-    body {
-      font-family: Arial, sans-serif;
-      background: #fff;
-      margin: 0;
-      padding: 0;
-      color: #193a6b;
+    html, body {
+      margin: 0; padding: 0;
+      width: 100vw; height: 100vh;
       min-height: 100vh;
+      background: #fff;
       overflow-x: hidden;
-      position: relative;
+      font-family: Arial, sans-serif;
+      color: #193a6b;
     }
+    body {
+      display: flex; flex-direction: column; width: 100vw; height: 100vh;
+    }
+    .fullscreen {
+      position: fixed !important;
+      top: 0; left: 0;
+      width: 100vw !important; height: 100vh !important;
+      background: #fff !important;
+      z-index: 9999;
+    }
+
     .loader-bg {
-      position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; background: #fff; z-index: 1000; display: flex; flex-direction: column; align-items: center; justify-content: center;
+      position: fixed; top: 0; left: 0; width: 100vw; height: 100vh;
+      background: #fff; z-index: 1000; display: flex; flex-direction: column; align-items: center; justify-content: center;
       animation: fadeOut 1.2s 4.7s forwards;
     }
     @keyframes fadeOut { to { opacity: 0; pointer-events: none; }}
     .loader-img {
-      width: 150px; border-radius: 24px; margin-bottom: 30px; box-shadow: 0 8px 40px #d2e7ff90;
+      width: 210px; height: 210px; border-radius: 36px; margin-bottom: 30px; box-shadow: 0 8px 40px #d2e7ff90; object-fit: cover;
       animation: appear 1.2s;
     }
     @keyframes appear { 0%{opacity:0;transform:scale(0.9);} 100%{opacity:1;transform:scale(1);} }
-    .loader-bar {
-      width: 160px; height: 8px; border-radius: 8px; background: #d0e1fa;
-      overflow: hidden; margin-top: 8px;
-    }
-    .loader-bar-inner {
-      width: 0; height: 100%; background: linear-gradient(90deg, #2186e7, #1ab0f9);
-      animation: load-bar 4s linear forwards;
-    }
+    .loader-bar { width: 180px; height: 12px; border-radius: 9px; background: #d0e1fa; overflow: hidden; margin-top: 8px;}
+    .loader-bar-inner { width: 0; height: 100%; background: linear-gradient(90deg, #2186e7, #1ab0f9); animation: load-bar 4s linear forwards;}
     @keyframes load-bar { 100% { width: 100%; } }
 
     .intro {
-      padding: 40px 15px 15px 15px; text-align: center;
-      display: none;
-      animation: fadeIn 1.5s;
+      padding: 42px 12px 20px 12px; text-align: center; display: none; animation: fadeIn 1.5s;
+      max-width: 100vw;
     }
     .intro.show { display: block;}
     @keyframes fadeIn {from{opacity:0;}to{opacity:1;}}
 
-    .btn-main {
-      padding: 16px 32px; background: linear-gradient(90deg,#2186e7,#1ab0f9); color: #fff; border: none; border-radius: 16px; font-size: 20px; font-weight: 700; margin: 24px auto 0; display: block; cursor: pointer; box-shadow: 0 4px 24px #d1e6ff50; transition: transform 0.1s;
-    }
-    .btn-main:active { transform: scale(0.98); }
-
-    .main-app { display: none; }
-    .top-bar {
-      display: flex; align-items: center; padding: 18px 16px 10px 8px; justify-content: space-between;
-    }
-    .user-nick { font-size: 19px; font-weight: bold; background: #e6f0ff; padding: 8px 22px 8px 40px; border-radius: 24px; position: relative; }
-    .user-nick:before {
-      content: '👤'; position: absolute; left: 10px; top: 7px; font-size: 18px;
-    }
+    .main-app { display: none; width: 100vw; height: 100vh; overflow: hidden;}
+    .top-bar { display: flex; align-items: center; padding: 18px 8px 10px 8px; justify-content: space-between;}
+    .user-nick { font-size: 19px; font-weight: bold; background: #e6f0ff; padding: 10px 26px 10px 44px; border-radius: 24px; position: relative; }
+    .user-nick:before { content: '👤'; position: absolute; left: 13px; top: 9px; font-size: 19px;}
     .users-count { font-size: 18px; font-weight: 700; background: #f4f7ff; border-radius: 16px; padding: 7px 20px; color: #2073d3;}
     .search-bar {
-      margin: 0 auto 15px auto; max-width: 420px; display: flex; align-items: center; position: relative;
+      margin: 0 auto 15px auto; max-width: 420px; display: flex; align-items: center; position: relative; width: 90vw;
     }
     .search-bar input {
-      width: 100%; font-size: 18px; padding: 10px 36px 10px 15px; border-radius: 18px; border: 1px solid #d7e4f5; outline: none; margin-right: 12px;
+      width: 100%; font-size: 18px; padding: 10px 36px 10px 15px; border-radius: 18px; border: 1px solid #d7e4f5; outline: none;
     }
     .search-icon { position: absolute; right: 12px; top: 7px; font-size: 20px; color: #2186e7; }
 
-    .ads-list { max-width: 520px; margin: 0 auto; min-height: 350px; padding-bottom: 70px; position: relative; }
+    .ads-list { max-width: 540px; margin: 0 auto; min-height: 350px; padding-bottom: 90px; position: relative;}
     .ad-card {
       background: #f4f7ff; border-radius: 18px; padding: 16px 12px 12px; margin-bottom: 22px; box-shadow: 0 2px 10px #dae7fb36; position: relative; transition: box-shadow 0.2s;
     }
@@ -81,25 +75,14 @@
     .ad-views { font-size: 14px; color: #b6cbe8;}
     .ad-btn { padding: 8px 16px; background: #2b81f7; color: #fff; border: none; border-radius: 12px; cursor: pointer; font-size: 15px; font-weight: 700; transition: background 0.12s;}
     .ad-btn:active { background: #1562be;}
-
     .add-btn-main {
       position: fixed; bottom: 30px; left: 50%; transform: translateX(-50%); padding: 14px 42px; border-radius: 24px; background: linear-gradient(90deg,#2186e7,#1ab0f9); color: #fff; font-size: 22px; font-weight: 700; box-shadow: 0 8px 28px #b4c4ee4d; border: none; cursor: pointer; z-index: 10;
     }
-    .scroll-down {
-      display: none; position: fixed; right: 16px; bottom: 80px; z-index: 20; background: #f6faff; border-radius: 50%; box-shadow: 0 3px 16px #99cdfd40; width: 50px; height: 50px; align-items: center; justify-content: center; font-size: 26px; color: #2186e7; cursor: pointer;
-      animation: fadeInDown 0.3s;
-    }
+    .scroll-down { display: none; position: fixed; right: 16px; bottom: 80px; z-index: 20; background: #f6faff; border-radius: 50%; box-shadow: 0 3px 16px #99cdfd40; width: 50px; height: 50px; align-items: center; justify-content: center; font-size: 26px; color: #2186e7; cursor: pointer; animation: fadeInDown 0.3s;}
     @keyframes fadeInDown {from{opacity:0;transform:translateY(40px);}to{opacity:1;transform:translateY(0);}}
-
-    /* Add Modal */
-    .modal-bg {
-      position: fixed; z-index: 101; top: 0; left: 0; width: 100vw; height: 100vh; background: #0005; display: flex; align-items: center; justify-content: center; animation: fadeIn 0.6s;
-      display: none;
-    }
+    .modal-bg { position: fixed; z-index: 101; top: 0; left: 0; width: 100vw; height: 100vh; background: #0005; display: flex; align-items: center; justify-content: center; animation: fadeIn 0.6s; display: none;}
     .modal-bg.show { display: flex;}
-    .modal-card {
-      background: #fff; border-radius: 22px; box-shadow: 0 8px 44px #b1d6fc42; max-width: 98vw; width: 370px; padding: 32px 20px 22px; position: relative; text-align: left; animation: appear 0.5s;
-    }
+    .modal-card { background: #fff; border-radius: 22px; box-shadow: 0 8px 44px #b1d6fc42; max-width: 98vw; width: 370px; padding: 32px 20px 22px; position: relative; text-align: left; animation: appear 0.5s;}
     .modal-card h2 {font-size: 22px; margin: 0 0 14px 0;}
     .modal-field { margin-bottom: 16px;}
     .modal-field input, .modal-field textarea { width: 100%; font-size: 17px; padding: 10px; border-radius: 10px; border: 1px solid #d7e4f5; outline: none;}
@@ -108,22 +91,9 @@
     .modal-btn.cancel { background: #f0f0f0; color: #205;}
     .modal-photo { margin-bottom: 6px;}
     .modal-photo input { width: 100%;}
-
-    /* Anim money on bg */
-    .money-bg {
-      position: fixed; pointer-events: none; left: 0; top: 0; width: 100vw; height: 100vh; z-index: 0;
-      overflow: hidden;
-    }
-    .money-coin {
-      position: absolute; font-size: 36px; animation: float 10s linear infinite; opacity: 0.55;
-    }
-    @keyframes float {
-      0% {transform: translateY(0) scale(0.95);}
-      80% {opacity: 0.75;}
-      100% {transform: translateY(95vh) scale(1.13); opacity: 0;}
-    }
-
-    /* Adaptive */
+    .money-bg { position: fixed; pointer-events: none; left: 0; top: 0; width: 100vw; height: 100vh; z-index: 0; overflow: hidden;}
+    .money-coin { position: absolute; font-size: 38px; animation: float 10s linear infinite; opacity: 0.55;}
+    @keyframes float { 0% {transform: translateY(0) scale(0.95);} 80% {opacity: 0.75;} 100% {transform: translateY(95vh) scale(1.13); opacity: 0;}}
     @media (max-width: 480px) {
       .user-nick {font-size: 17px;}
       .users-count {font-size: 15px;}
@@ -132,6 +102,11 @@
       .ad-title {font-size: 15px;}
       .add-btn-main {font-size: 18px;}
       .modal-card {width: 98vw;}
+      .loader-img {width: 140px; height: 140px;}
+    }
+    .tg-warning {
+      position: fixed; bottom: 0; left: 0; width: 100vw; z-index: 12000;
+      background: #ffe7e7; color: #b31313; font-size: 17px; font-weight: 700; text-align: center; padding: 22px 8px; box-shadow: 0 -2px 18px #c1adad60;
     }
   </style>
 </head>
@@ -147,17 +122,20 @@
 
   <!-- Intro/Welcome -->
   <div class="intro" id="intro">
-    <h1>👋 Вітаємо у <b>СамСобіШеф</b>!</h1>
-    <p>Це перше Telegram-мінідодаток для пошуку роботи та виконавців по Одесі та області.<br>
-    Ви можете <b>розмістити завдання</b> або <b>знайти підробіток</b> прямо тут.<br><br>
-    <span style="color:#2073d3;">• Роботодавці і виконавці</span><br>
-    <span style="color:#2073d3;">• Публікація оголошень за пару секунд</span><br>
-    <span style="color:#2073d3;">• Перевірка і підтвердження модератором</span></p>
-    <button class="btn-main" id="btn-continue">Продовжити</button>
+    <img src="https://i.ibb.co/HLc01jWL/22c6c8c1-5106-4955-bec9-7c071a2a41e3.png" alt="logo" style="width:160px;height:160px;border-radius:28px;box-shadow:0 8px 30px #90e0ff44;">
+    <h1 style="font-size:2.1em;margin-bottom:20px;">👋 Вітаємо у <b>СамСобіШеф</b>!</h1>
+    <p style="font-size:1.13em;">
+      Це перший Telegram-мінідодаток для пошуку роботи та виконавців по Одесі та області.<br>
+      Ви можете <b>розмістити завдання</b> або <b>знайти підробіток</b> прямо тут.<br><br>
+      <span style="color:#2073d3;">• Роботодавці і виконавці</span><br>
+      <span style="color:#2073d3;">• Публікація оголошень за пару секунд</span><br>
+      <span style="color:#2073d3;">• Перевірка і підтвердження модератором</span>
+    </p>
+    <button class="btn-main" id="btn-continue" style="margin-top:32px;">Відкрити додаток</button>
   </div>
 
   <!-- Основное приложение -->
-  <div class="main-app" id="main-app">
+  <div class="main-app fullscreen" id="main-app">
     <div class="top-bar">
       <div class="user-nick" id="user-nick">@User</div>
       <div class="users-count" id="users-count">2369</div>
@@ -199,15 +177,17 @@
       </form>
     </div>
   </div>
-
+  <div id="tg-warning" class="tg-warning" style="display:none;">
+    ❗️ Запустіть додаток через Telegram WebApp (кнопка "Відкрити додаток" у боті) для повної функціональності!
+  </div>
   <script>
-    // ——— 1. Лоадер и старт
+    // Лоадер
     setTimeout(() => {
       document.getElementById('loader').style.display = 'none';
       document.getElementById('intro').classList.add('show');
     }, 5200);
 
-    // ——— 2. Money background anim
+    // Анимация денег
     function createMoneyCoin() {
       const icons = ["💸","💵","💶","💰","🪙"];
       const el = document.createElement("div");
@@ -222,34 +202,42 @@
     }
     setInterval(createMoneyCoin, 1100);
 
-    // ——— 3. Welcome > Main App
+    // Показываем приложение по кнопке
     document.getElementById('btn-continue').onclick = function() {
       document.getElementById('intro').style.display = 'none';
       document.getElementById('main-app').style.display = 'block';
+      document.getElementById('main-app').classList.add('fullscreen');
+      checkTelegram();
     };
 
-    // ——— 4. Получение username из Telegram WebApp
-    let userNick = "@User";
-    if (window.Telegram && Telegram.WebApp && Telegram.WebApp.initDataUnsafe && Telegram.WebApp.initDataUnsafe.user && Telegram.WebApp.initDataUnsafe.user.username) {
-      userNick = "@" + Telegram.WebApp.initDataUnsafe.user.username;
+    // Получаем username из Telegram WebApp
+    let userNick = "Гість";
+    function checkTelegram() {
+      if (window.Telegram && Telegram.WebApp && Telegram.WebApp.initDataUnsafe && Telegram.WebApp.initDataUnsafe.user) {
+        let u = Telegram.WebApp.initDataUnsafe.user;
+        userNick = u.username ? "@" + u.username : u.first_name || "Гість";
+        document.getElementById('user-nick').textContent = userNick;
+        document.getElementById('tg-warning').style.display = 'none';
+      } else {
+        // Если НЕ через Telegram — показываем предупреждение и имя Гість
+        document.getElementById('user-nick').textContent = "Гість";
+        document.getElementById('tg-warning').style.display = 'block';
+      }
     }
-    document.getElementById('user-nick').textContent = userNick;
+    // checkTelegram(); // не вызывать до кнопки
 
-    // ——— 5. Users count
+    // Users count
     let usersCount = 2369;
     function updateUsersCount(n) {
       usersCount += n; document.getElementById('users-count').textContent = usersCount;
     }
-    // На каждое новое подключение можно дергать updateUsersCount(1);
 
-    // ——— 6. Dummy объявления для примера
+    // Dummy объявления для примера
     let ads = [
       {id:1,desc:"Потрібно пофарбувати паркан у дворі.",price:900,phone:"093 123 45 67",time:"сьогодні, 10:21",likes:3,views:44,geo:null,photo:null,user:"@tanya_job"},
       {id:2,desc:"Зібрати меблі. Вечір.",price:400,phone:"095 888 33 55",time:"сьогодні, 09:50",likes:8,views:77,geo:null,photo:null,user:"@den_od"},
       {id:3,desc:"Вивезти будівельне сміття з квартири.",price:600,phone:"068 789 14 33",time:"вчора, 16:01",likes:4,views:52,geo:{lat:46.4825,lon:30.7233},photo:null,user:"@vova_help"}
     ];
-
-    // ——— 7. Рендер объявлений
     function renderAds(list) {
       const wrap = document.getElementById('ads-list');
       wrap.innerHTML = '';
@@ -272,7 +260,6 @@
     }
     renderAds(ads);
 
-    // ——— 8. Like logic
     window.likeAd = function(id, el) {
       let ad = ads.find(x=>x.id===id);
       if (ad) {
@@ -282,13 +269,12 @@
       }
     };
 
-    // ——— 9. Поиск
     document.getElementById('search-input').oninput = function() {
       const q = this.value.toLowerCase();
       renderAds(ads.filter(ad=>ad.desc.toLowerCase().includes(q)));
     };
 
-    // ——— 10. Кнопка вниз при скролле
+    // Кнопка вниз при скролле
     const adsList = document.getElementById('ads-list');
     const scrollDownBtn = document.getElementById('scroll-down');
     adsList.onscroll = function() {
@@ -297,7 +283,7 @@
     };
     scrollDownBtn.onclick = function() { adsList.scrollTo({top:100000,behavior:'smooth'}); };
 
-    // ——— 11. Добавить объявление (модалка)
+    // Добавить объявление (модалка)
     let geo = null, photoBase64 = null;
     document.getElementById('add-btn').onclick = function() {
       document.getElementById('add-modal').classList.add('show');
@@ -324,10 +310,9 @@
         reader.readAsDataURL(file);
       }
     };
-    // ——— 12. Submit объявления
+
     document.getElementById('add-form').onsubmit = async function(e) {
       e.preventDefault();
-      // Показываем "ОЧІКУЙТЕ"
       document.getElementById('add-modal').classList.remove('show');
       alert('⏳ Ваше оголошення на перевірці! Очікуйте пару хвилин…');
       // Отправляем админу через backend
@@ -343,16 +328,13 @@
       });
     };
 
-    // ——— 13. Принять работу
     window.takeJob = function(id) {
       const ad = ads.find(x=>x.id===id);
       if (!ad) return;
       if (confirm('Підтвердити взяття у роботу?')) {
-        // тут надо отправить на backend что юзер взял задание, уведомить автора
         alert('Ваш запит на виконання завдання відправлено автору!');
       }
     };
   </script>
 </body>
 </html>
-
