--- a/index.html
+++ b/index.html
@@ -3,55 +3,66 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>СамСобіШеф | Робота Одеса</title>
+  <title>СамСобіШеф | Робота в Одесі</title>
+  <!-- SEO -->
+  <meta name="description" content="СамСобіШеф — платформа для пошуку підробітку та виконавців в Одесі та області. Реєструйтесь, додавайте завдання чи знаходьте роботу поруч!">
+  <meta property="og:title" content="СамСобіШеф | Робота в Одесі" />
+  <meta property="og:description" content="Швидкий пошук підробітку та виконавців в Одесі. Додавайте завдання або знаходьте роботу!" />
+  <meta property="og:image" content="https://i.ibb.co/HLc01jWL/22c6c8c1-5106-4955-bec9-7c071a2a41e3.png" />
+  <link rel="icon" type="image/png" href="https://i.ibb.co/HLc01jWL/22c6c8c1-5106-4955-bec9-7c071a2a41e3.png"/>
   <style>
-    body {font-family: Arial, sans-serif;background:#f5f7fc;margin:0;padding:0;}
-    .main-app {max-width:430px;margin:36px auto;padding:0 6px;}
-    .logo {width:70px;display:block;margin:28px auto 12px;}
-    .login-form, .reg-form {background:#fff;border-radius:14px;padding:20px 12px 18px;box-shadow:0 2px 18px #d7e4f566;margin-bottom:22px;}
-    .login-form h2, .reg-form h2 {margin-top:0;font-size:1.17em;}
-    .login-form input, .reg-form input {width:100%;padding:10px 9px;margin:8px 0 14px 0;border-radius:10px;border:1px solid #d8e6fc;}
-    .login-form button, .reg-form button, .btn-main {background:#2978e6;color:#fff;border:none;font-weight:bold;font-size:1.04em;padding:12px 0;width:100%;border-radius:10px;box-shadow:0 2px 12px #bdd3fd1c;margin:10px 0;}
-    .switch {text-align:center;color:#1a71b1;cursor:pointer;text-decoration:underline;margin:12px 0 0;}
-    .user-top {display:flex;justify-content:space-between;align-items:center;background:#e3f0ff;border-radius:13px;padding:10px 14px 8px;margin-bottom:13px;}
-    .user-top span {font-size:15px;}
+    body {font-family: Arial,sans-serif; background:#f5f7fc; margin:0; padding:0;}
+    .main-app {max-width:430px; margin:44px auto 0; padding:0 6px; transition: all .4s;}
+    .logo {width:84px; display:block; margin:16px auto 18px; border-radius:22px;}
+    .login-form, .reg-form {background:#fff; border-radius:18px; padding:20px 14px 18px; box-shadow:0 2px 18px #d7e4f555; margin-bottom:24px; transition:.3s;}
+    .login-form h2, .reg-form h2 {margin-top:0; font-size:1.14em;}
+    .login-form input, .reg-form input {width:100%; padding:10px 9px; margin:8px 0 14px 0; border-radius:10px; border:1px solid #d8e6fc; font-size:1.02em; transition:.2s;}
+    .login-form button, .reg-form button, .btn-main {background:#2978e6; color:#fff; border:none; font-weight:600; font-size:1.07em; padding:12px 0; width:100%; border-radius:10px; box-shadow:0 2px 12px #bdd3fd16; margin:12px 0;}
+    .switch {text-align:center; color:#1a71b1; cursor:pointer; text-decoration:underline; margin:13px 0 0;}
+    .user-top {display:flex; justify-content:space-between; align-items:center; background:#e3f0ff; border-radius:14px; padding:10px 14px 8px; margin-bottom:16px;}
+    .user-top span {font-size:16px;}
     .ads-list {margin-top:13px;}
-    .ad-card {background:#fff;border-radius:12px;padding:10px 11px 6px 11px;margin-bottom:10px;box-shadow:0 1px 8px #dbe3f330;}
-    .ad-title {font-size:16px;margin-bottom:6px;font-weight:600;}
-    .ad-meta {font-size:12px;color:#3167ae;margin-bottom:5px;}
-    .ad-actions {display:flex;align-items:center;justify-content:space-between;}
-    .ad-likes {font-size:14px;cursor:pointer;color:#2093e7;display:flex;align-items:center;}
+    .ad-card {background:#fff; border-radius:13px; padding:10px 11px 6px 11px; margin-bottom:10px; box-shadow:0 1px 9px #dbe3f330; transition:.25s;}
+    .ad-title {font-size:16px; margin-bottom:5px; font-weight:600;}
+    .ad-meta {font-size:12px; color:#3167ae; margin-bottom:5px;}
+    .ad-actions {display:flex; align-items:center; justify-content:space-between;}
+    .ad-likes {font-size:14px; cursor:pointer; color:#2093e7; display:flex; align-items:center;}
     .ad-likes.liked {color:#ffad3d;}
     .ad-likes span {margin-left:3px;}
-    .ad-views {font-size:13px;color:#b6cbe8;}
-    .ad-btn {padding:6px 16px;background:#2b81f7;color:#fff;border:none;border-radius:12px;cursor:pointer;font-size:13px;font-weight:700;}
-    .add-btn-main {background:#2b81f7; color:#fff;border:none; font-weight:700; font-size:1em; padding:12px 18px;border-radius:13px;margin:15px 0;display:block;box-shadow:0 2px 12px #d7e4f540;width:100%;}
-    .modal-bg {position:fixed;z-index:10;top:0;left:0;width:100vw;height:100vh;background:#0006;display:flex;align-items:center;justify-content:center;}
-    .modal-card {background:#fff;border-radius:14px;box-shadow:0 4px 22px #b1d6fc42;width:320px;padding:22px 18px 12px;text-align:left;}
-    .modal-card h2 {font-size:18px;margin:0 0 14px;}
-    .modal-field {margin-bottom:14px;}
-    .modal-field input, .modal-field textarea {width:100%;font-size:15px;padding:9px 9px;border-radius:8px;border:1px solid #d7e4f5;outline:none;}
+    .ad-views {font-size:13px; color:#b6cbe8;}
+    .ad-btn {padding:6px 16px; background:#2b81f7; color:#fff; border:none; border-radius:12px; cursor:pointer; font-size:13px; font-weight:700;}
+    .add-btn-main {background:#2b81f7; color:#fff; border:none; font-weight:700; font-size:1em; padding:12px 18px; border-radius:13px; margin:18px 0; display:block; box-shadow:0 2px 12px #d7e4f540; width:100%;transition:.25s;}
+    .modal-bg {position:fixed;z-index:10;top:0;left:0;width:100vw;height:100vh;background:#0005;display:flex;align-items:center;justify-content:center;animation:fadeIn .7s;transition:.4s;opacity:0;pointer-events:none;}
+    .modal-bg.show {opacity:1; pointer-events:all;}
+    .modal-card {background:#fff; border-radius:17px; box-shadow:0 4px 28px #b1d6fc45; width:340px; padding:26px 18px 12px; text-align:left; animation:popin .5s;}
+    @keyframes popin {0%{transform:scale(.9);opacity:0;}100%{transform:scale(1);opacity:1;}}
+    .modal-card h2 {font-size:18px; margin:0 0 14px;}
+    .modal-field {margin-bottom:16px;}
+    .modal-field input, .modal-field textarea {width:100%; font-size:15px; padding:9px 9px; border-radius:8px; border:1px solid #d7e4f5; outline:none;}
     .modal-btns {display:flex;justify-content:flex-end;gap:15px;}
-    .modal-btn {padding:10px 21px;font-size:15px;font-weight:700;border-radius:10px;border:none;background:#2186e7;color:#fff;cursor:pointer;}
-    .modal-btn.cancel {background:#f0f0f0;color:#205;}
+    .modal-btn {padding:10px 21px; font-size:15px; font-weight:700; border-radius:10px; border:none; background:#2186e7; color:#fff; cursor:pointer;}
+    .modal-btn.cancel {background:#f0f0f0; color:#205;}
     .hidden {display:none;}
-    .msg {padding:11px 9px;margin:7px 0;background:#fff4cc;border-radius:10px;color:#ae820c;text-align:center;}
+    .msg {padding:12px 9px; margin:11px 0; background:#fff4cc; border-radius:10px; color:#ae820c; text-align:center; font-size:1.1em; opacity:0; transition:.3s;}
+    .msg.show {opacity:1;}
+    .fadein {animation:fadeIn .8s;}
+    @keyframes fadeIn {from{opacity:0;}to{opacity:1;}}
   </style>
 </head>
 <body>
-  <div class="main-app" id="main-app">
+  <div class="main-app fadein" id="main-app">
     <img src="https://i.ibb.co/HLc01jWL/22c6c8c1-5106-4955-bec9-7c071a2a41e3.png" class="logo" alt="logo"/>
     <div id="auth-box">
       <form class="login-form" id="login-form">
         <h2>Вхід у СамСобіШеф</h2>
-        <input type="text" id="login-nick" placeholder="Ваш нік" required>
+        <input type="text" id="login-nick" placeholder="Ваш нік" required autocomplete="username">
         <button type="submit">Увійти</button>
         <div class="switch" id="go-register">Немає акаунту? Зареєструватися</div>
       </form>
-      <form class="reg-form hidden" id="reg-form">
+      <form class="reg-form hidden" id="reg-form" autocomplete="off">
         <h2>Реєстрація</h2>
-        <input type="text" id="reg-nick" placeholder="Бажаний нік" required>
-        <input type="tel" id="reg-phone" placeholder="Телефон" required>
+        <input type="text" id="reg-nick" placeholder="Бажаний нік (6+ символів)" minlength="6" maxlength="20" pattern="[a-zA-Z0-9_]+" required>
+        <input type="tel" id="reg-phone" placeholder="Телефон (+380XXXXXXXXX або 0XXXXXXXXX)" required maxlength="13">
         <button type="submit">Зареєструватися</button>
         <div class="switch" id="go-login">Вже є акаунт? Увійти</div>
       </form>
@@ -65,11 +76,11 @@
     </div>
   </div>
   <!-- Модалка додавання -->
-  <div class="modal-bg hidden" id="add-modal">
+  <div class="modal-bg" id="add-modal">
     <div class="modal-card">
       <h2>Додати оголошення</h2>
       <form id="add-form">
-        <div class="modal-field"><textarea id="task-desc" placeholder="Опишіть завдання..." required></textarea></div>
+        <div class="modal-field"><textarea id="task-desc" placeholder="Опишіть завдання..." required minlength="10"></textarea></div>
         <div class="modal-field"><input type="number" min="0" id="task-price" placeholder="Ціна, грн" required></div>
         <div class="modal-field"><input type="tel" id="task-phone" placeholder="Телефон" required></div>
         <div class="modal-btns">
@@ -79,15 +90,27 @@
       </form>
     </div>
   </div>
-  <div class="msg hidden" id="msg"></div>
+  <div class="msg" id="msg"></div>
   <script>
-    // --- Простая авторизация и регистрация ---
+    // --- Утилиты и селекторы ---
     function $(x) {return document.getElementById(x);}
-    function showMsg(txt) { $('msg').textContent = txt; $('msg').classList.remove('hidden'); setTimeout(()=>{$('msg').classList.add('hidden');},2000);}
+    function showMsg(txt) {
+      $('msg').textContent = txt;
+      $('msg').classList.add('show');
+      setTimeout(()=>{$('msg').classList.remove('show');},2400);
+    }
     let ads = [];
     let user = null;
 
-    // --- Логика ---
+    // --- Валидация ника и телефона ---
+    function validNick(nick) {
+      return typeof nick === "string" && /^[a-zA-Z0-9_]{6,20}$/.test(nick);
+    }
+    function validUAphone(phone) {
+      let p = phone.replace(/\D/g, '');
+      return (/^380\d{9}$/.test(p) || /^0\d{9}$/.test(p));
+    }
+
     function saveUser(u){localStorage.setItem('sshef_user',JSON.stringify(u));}
     function loadUser(){let d=localStorage.getItem('sshef_user');return d?JSON.parse(d):null;}
     function showPanel(){
@@ -101,16 +124,23 @@
       $('user-panel').classList.add('hidden');
     }
 
-    // --- Переключение форм ---
-    $('go-register').onclick = ()=>{ $('login-form').classList.add('hidden'); $('reg-form').classList.remove('hidden'); };
-    $('go-login').onclick = ()=>{ $('reg-form').classList.add('hidden'); $('login-form').classList.remove('hidden'); };
+    // --- Плавность переходов ---
+    function fadeSwitch(showId, hideId) {
+      $(hideId).classList.add('hidden');
+      $(showId).classList.remove('hidden');
+      $(showId).classList.add('fadein');
+      setTimeout(()=>{$(showId).classList.remove('fadein');},500);
+    }
+    $('go-register').onclick = ()=>{ fadeSwitch('reg-form','login-form'); };
+    $('go-login').onclick = ()=>{ fadeSwitch('login-form','reg-form'); };
 
     // --- Регистрация ---
     $('reg-form').onsubmit = async function(e){
       e.preventDefault();
       let nick = $('reg-nick').value.trim();
       let phone = $('reg-phone').value.trim();
-      if (!nick || !phone) return showMsg('Заповніть всі поля!');
+      if (!validNick(nick)) return showMsg('Нік має бути мінімум 6 латинських символів!');
+      if (!validUAphone(phone)) return showMsg('Введіть коректний UA номер!');
       // Проверка уникальности ника
       let resp = await fetch('http://localhost:8097/check_nick', {method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({nick})});
       let data = await resp.json();
@@ -121,16 +151,15 @@
       showPanel();
       await fetch('http://localhost:8097/visit', {method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(user)});
     };
-    // --- Вход ---
+    // --- Вхід ---
     $('login-form').onsubmit = async function(e){
       e.preventDefault();
       let nick = $('login-nick').value.trim();
-      if (!nick) return showMsg('Введіть нік!');
+      if (!validNick(nick)) return showMsg('Некоректний нік!');
       // Проверка существования ника
       let resp = await fetch('http://localhost:8097/check_nick', {method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({nick,check_exist:true})});
       let data = await resp.json();
       if (!data.ok) return showMsg('Такого ніку не знайдено!');
-      // Подгружаем номер
       user = {nick, phone:data.phone||""};
       saveUser(user);
       showPanel();
@@ -140,7 +169,6 @@
       user = loadUser();
       if (user) showPanel(); else showAuth();
     };
-
     // --- Загрузка объявлений ---
     async function loadAds(){
       let resp = await fetch('http://localhost:8097/ads');
@@ -165,17 +193,17 @@
         wrap.innerHTML += adHTML;
       });
     }
-
     // --- Добавить объявление ---
-    $('add-btn').onclick = ()=>{ $('add-modal').classList.remove('hidden'); };
-    $('cancel-modal').onclick = ()=>{ $('add-modal').classList.add('hidden'); $('add-form').reset();};
+    $('add-btn').onclick = ()=>{ $('add-modal').classList.add('show'); };
+    $('cancel-modal').onclick = ()=>{ $('add-modal').classList.remove('show'); $('add-form').reset();};
     $('add-form').onsubmit = async function(e){
       e.preventDefault();
-      let desc=$('task-desc').value,price=$('task-price').value,phone=$('task-phone').value;
-      if(!desc||!price||!phone)return showMsg('Всі поля обовʼязкові!');
+      let desc=$('task-desc').value.trim(),price=$('task-price').value.trim(),phone=$('task-phone').value.trim();
+      if(desc.length<10)return showMsg('Опис має бути від 10 символів!');
+      if(!validUAphone(phone))return showMsg('Телефон некоректний!');
       let payload = {desc, price, phone, user:user.nick};
       let resp = await fetch('http://localhost:8097/new_ad', {method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(payload)});
-      $('add-modal').classList.add('hidden');$('add-form').reset();
+      $('add-modal').classList.remove('show');$('add-form').reset();
       if ((await resp.json()).ok) showMsg('На модерації!');
       else showMsg('Помилка сервера!');
     };
