--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>СамСобіШеф | Робота в Одесі</title>
-  <!-- SEO -->
   <meta name="description" content="СамСобіШеф — платформа для пошуку підробітку та виконавців в Одесі та області. Реєструйтесь, додавайте завдання чи знаходьте роботу поруч!">
   <meta property="og:title" content="СамСобіШеф | Робота в Одесі" />
   <meta property="og:description" content="Швидкий пошук підробітку та виконавців в Одесі. Додавайте завдання або знаходьте роботу!" />
@@ -92,7 +91,9 @@
   </div>
   <div class="msg" id="msg"></div>
   <script>
-    // --- Утилиты и селекторы ---
+    // === Адрес Cloudflare Tunnel:
+    const SERVER = 'https://internet-ahead-reviewed-bacterial.trycloudflare.com';
+
     function $(x) {return document.getElementById(x);}
     function showMsg(txt) {
       $('msg').textContent = txt;
@@ -101,8 +102,6 @@
     }
     let ads = [];
     let user = null;
-
-    // --- Валидация ника и телефона ---
     function validNick(nick) {
       return typeof nick === "string" && /^[a-zA-Z0-9_]{6,20}$/.test(nick);
     }
@@ -110,7 +109,6 @@
       let p = phone.replace(/\D/g, '');
       return (/^380\d{9}$/.test(p) || /^0\d{9}$/.test(p));
     }
-
     function saveUser(u){localStorage.setItem('sshef_user',JSON.stringify(u));}
     function loadUser(){let d=localStorage.getItem('sshef_user');return d?JSON.parse(d):null;}
     function showPanel(){
@@ -123,8 +121,6 @@
       $('auth-box').classList.remove('hidden');
       $('user-panel').classList.add('hidden');
     }
-
-    // --- Плавность переходов ---
     function fadeSwitch(showId, hideId) {
       $(hideId).classList.add('hidden');
       $(showId).classList.remove('hidden');
@@ -134,49 +130,42 @@
     $('go-register').onclick = ()=>{ fadeSwitch('reg-form','login-form'); };
     $('go-login').onclick = ()=>{ fadeSwitch('login-form','reg-form'); };
 
-    // --- Регистрация ---
     $('reg-form').onsubmit = async function(e){
       e.preventDefault();
       let nick = $('reg-nick').value.trim();
       let phone = $('reg-phone').value.trim();
       if (!validNick(nick)) return showMsg('Нік має бути мінімум 6 латинських символів!');
       if (!validUAphone(phone)) return showMsg('Введіть коректний UA номер!');
-      // Проверка уникальности ника
-      let resp = await fetch('http://localhost:8097/check_nick', {method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({nick})});
+      let resp = await fetch(SERVER+'/check_nick', {method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({nick})});
       let data = await resp.json();
       if (!data.ok) return showMsg('Такий нік вже існує!');
       user = {nick, phone};
       saveUser(user);
       $('reg-form').reset();
       showPanel();
-      await fetch('http://localhost:8097/visit', {method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(user)});
+      await fetch(SERVER+'/visit', {method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(user)});
     };
-    // --- Вхід ---
     $('login-form').onsubmit = async function(e){
       e.preventDefault();
       let nick = $('login-nick').value.trim();
       if (!validNick(nick)) return showMsg('Некоректний нік!');
-      // Проверка существования ника
-      let resp = await fetch('http://localhost:8097/check_nick', {method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({nick,check_exist:true})});
+      let resp = await fetch(SERVER+'/check_nick', {method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({nick,check_exist:true})});
       let data = await resp.json();
       if (!data.ok) return showMsg('Такого ніку не знайдено!');
       user = {nick, phone:data.phone||""};
       saveUser(user);
       showPanel();
     };
-    // --- Проверка сессии ---
     window.onload = function(){
       user = loadUser();
       if (user) showPanel(); else showAuth();
     };
-    // --- Загрузка объявлений ---
     async function loadAds(){
-      let resp = await fetch('http://localhost:8097/ads');
+      let resp = await fetch(SERVER+'/ads');
       let data = await resp.json();
       ads = data;
       renderAds();
     }
-    // --- Рендер ---
     function renderAds(){
       let wrap = $('ads-list');
       wrap.innerHTML = '';
@@ -193,7 +182,6 @@
         wrap.innerHTML += adHTML;
       });
     }
-    // --- Добавить объявление ---
     $('add-btn').onclick = ()=>{ $('add-modal').classList.add('show'); };
     $('cancel-modal').onclick = ()=>{ $('add-modal').classList.remove('show'); $('add-form').reset();};
     $('add-form').onsubmit = async function(e){
@@ -202,7 +190,7 @@
       if(desc.length<10)return showMsg('Опис має бути від 10 символів!');
       if(!validUAphone(phone))return showMsg('Телефон некоректний!');
       let payload = {desc, price, phone, user:user.nick};
-      let resp = await fetch('http://localhost:8097/new_ad', {method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(payload)});
+      let resp = await fetch(SERVER+'/new_ad', {method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(payload)});
       $('add-modal').classList.remove('show');$('add-form').reset();
       if ((await resp.json()).ok) showMsg('На модерації!');
       else showMsg('Помилка сервера!');
