--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   </div>
   <div class="msg" id="msg"></div>
   <script>
-    // === Адрес Cloudflare Tunnel:
+    // Cloudflare tunnel адрес (не забудь обновить, если ссылка изменится!)
     const SERVER = 'https://internet-ahead-reviewed-bacterial.trycloudflare.com';
 
     function $(x) {return document.getElementById(x);}
